--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 .buttonPointer {
   font-size: 155%;
 }
+
 .plus {
   background-color: rgb(145, 145, 145);
   width: 50px;
@@ -41,4 +42,37 @@ body {
   border-radius: 20%;
   box-shadow: 1px 1px 5px;
   font-size: 150%;
+}
+
+#modal {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  top: 0%;
+  left: 0%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+.modal-content {
+  position: absolute;
+  background-color: beige;
+  border-radius: 8px;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  max-width: 400px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+#new-book-form {
+  display: flex;
+  flex-direction: column;
+  padding: 15%;
+  border-radius: 5%;
+}
+.close {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
 }
