--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,21 @@ body {
   font-size: 24px;
   cursor: pointer;
 }
+.library-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.book-card {
+  width: 10%;
+  margin: 1%;
+  padding: 2%;
+  background-color: rgba(139, 72, 45, 0.959);
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 2px 3px 2px;
+  font-family: sans-serif;
+  font-size: 18px;
+  word-wrap: break-word;
+  gap: 2px;
+}
